--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "slp-scaffold-angular",
-  "version": "0.4.7",
+  "version": "0.4.8",
   "license": "MIT",
   "description": "Basic angular app w/ SLP SDK bindings",
   "author": "Gabriel Cardona @ Bitcoin.com",
@@ -40,7 +40,7 @@
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "^10.5.2",
-    "slp-sdk": "0.4.7",
+    "slp-sdk": "0.4.x",
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -49,7 +49,6 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
     "typescript": "~2.5.3",
