--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "slp-scaffold-angular",
-  "version": "0.4.9",
+  "version": "0.4.10",
   "license": "MIT",
   "description": "Basic angular app w/ SLP SDK bindings",
   "author": "Gabriel Cardona @ Bitcoin.com",
@@ -40,7 +40,7 @@
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "^10.5.2",
-    "slp-sdk": "0.4.x",
+    "slp-sdk": "0.4.10",
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -64,7 +64,6 @@
     "eslint-plugin-promise": "^2.0.1",
     "eslint-plugin-standard": "^4.0.0",
     "node-mocks-http": "^1.7.0",
-    "nodemon": "^1.8.1",
     "supertest": "^2.0.0",
     "prettier": "^1.14.2"
   }
